Wed Jun 27 12:12:27 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.12.

Tue Jun 26 11:51:43 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Update for 1.2.11.

Tue Jun 26 08:47:32 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Fri Jun 22 11:32:54 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Document that we now work around "undefined symbol:
	  zend_error_noreturn".  Fix was accidentally committed along
	  with backported change in r16693.

Fri Jun 08 12:07:05 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog.

Wed Jun 06 13:48:31 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* csharp/docs/index.html: Update Mono version tested with.

Wed Jun 06 13:40:20 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* lua/Makefile.am,perl/Makefile.am,python/Makefile.am: Ship the scripts
	  which generate the except.i files.

Wed Jun 06 13:36:22 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* perl/util.i: Pass 0 instead of NULL for non-pointer parameter to
	  av_fetch (spotted due to GCC 4.7 warning).

Wed Jun 06 13:32:40 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* python/generate-python-exceptions: Remove superfluous ';' after
	  "namespace { [...] }".

Wed Jun 06 13:26:15 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac,php/Makefile.am: Fix "make check" for PHP to work in a
	  VPATH build using a release tarball.

Wed Jun 06 13:14:01 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* configure.ac: "checking ruby/io.h" -> "checking for ruby/io.h".

Wed Jun 06 13:08:17 GMT 2012  Olly Betts <olly@survex.com>

	* Backport change from trunk:
	* README: Fix 'Jit' -> 'it'.  Typo introduced in r15713.

Wed May 09 10:44:55 GMT 2012  Olly Betts <olly@survex.com>

	* NEWS,configure.ac: Updated for 1.2.10.
